SG-2004-08-09-0: Bugfix:    the reporting file was not written correctly under
                            linux on opteron.
                 Issue:     1207
                 Bugtraq:   5084317
                 Review:    AA

CR-2004-08-06-0: Bugfix:    Wrong entry SGE_QMASTER_PORT in qconf man page
                 Issue:     1112
                 Changed:   qconf man page
                 Review:    AA

CR-2004-08-05-2: Bugfix:    Need more verbose diagnosis msg if execd port is 
                            already bound
                 Issue:     1101
                 Bugtraq:   5083115
                 Changed:   commlib, execd, gdi, japi
                 Review:    SG

AA-2004-08-05-0: Bugfix:    tight integration doesn't work with CSP
                 Issue:     1080
                 Bugtraq:   5063314
                 Changed:   all
                 Review:    CR

CR-2004-08-05-1: Bugfix:    killed slave task on tight integration does 
                            not cleanup job correctly (part 1)
                 Issue:     1197
                 Bugtraq:   5082660
                 Changed:   execd
                 Review:    AH

SG-2004-08-04-1: Bugfix:    fixed an aspect of bug 1195: the error message
                            truncated to 100 characters.
                 Review:    RH
                 Issue:     -NA-
                 Bugtraq:   -NA-
                 Changed:   qsub

SG-2004-08-04-0: Bugfix:    qstat -ext -urg did not display the submit/start
                            time
                 Review:    RH
                 Issue:     1192
                 Bugtraq:   5082490
                 Changed:   qstat

SG-2004-08-03-2: Bugfix:    fixed qsat -g c output and qmon to show cqload
                            instead of load. The man page for qstat was
                            changed as well.
                 Review:    AA
                 Changed:   qstat, qmon, qstat.1
                 Issue:     1181, 1190